include_directories("${PROJECT_SOURCE_DIR}")

add_executable(vecmath vecmath.cpp)
add_executable(glslvec glslvec.cpp)
add_executable(linalgperf linalgperf.cpp)
add_executable(dft dft.cpp)
add_executable(benchmark benchmark.cpp)
if(GMPXX_FOUND)
	add_executable(gmp gmp.cpp)
	target_include_directories(gmp PUBLIC ${GMP_INCLUDE_DIRS} ${GMPXX_INCLUDE_DIRS})
	target_link_libraries(gmp ${GMP_LIBRARIES} ${GMPXX_LIBRARIES})
endif()