include_directories("${PROJECT_SOURCE_DIR}")

if(CXXTEST_FOUND)
	#set(CXXTEST_TESTGEN_ARGS --error-printer --root)
	CXXTEST_ADD_TEST(vecmath cxxtest_vecmath.cpp vecmath.cpp)
else()
	add_executable(vecmath vecmath.cpp)
	add_executable(glslvec glslvec.cpp)
	add_executable(linalgperf linalgperf.cpp)
	add_executable(dft dft.cpp)

	add_test(VectorMathTest vecmath)
	add_test(GLSLMathTest glslvec)
	add_test(LinearAlgebraPerformance linalgperf)
	add_test(DFT dft)
endif()
